--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,11 +34,17 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBox Grid.Row="0" Text="{Binding EnteredDateTime, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="0,0,150,0" />
+            <TextBox Grid.Row="0" Text="{Binding EnteredDateTime, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="0,0,150,0" ToolTip="Type or paste any date or time." />
+            <TextBlock Grid.Row="0" Text="Type or paste any date or time." HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,0,150,0" Foreground="LightGray" Visibility="{Binding ConversionHintVisibility}" IsHitTestVisible="False" />
             <TextBlock Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding UsableEnteredDateTimeDisplay}" MaxWidth="145" Margin="0,0,2.5,0" />
             
-            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                <Grid Name="ConversionsHolder" />
+            <ScrollViewer Name="ConversionsScroller" Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <Grid Name="ConversionsHolder">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                </Grid>
             </ScrollViewer>
         </Grid>
         <!-- EndRegion -->
